tests/ast_interpreter/err_str_arg_count.expected
<string>:2:11: error: function str expects 1 argument, but 0 were provided
    print(str());
          ^^^^^
